--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "map-files",
-  "description": "Traverse a directory of files, and return an object. Pass a `rename` function for the keys, or a `parse` function for the content.",
-  "version": "0.1.0",
+  "description": "Return an object for a glob of files. Pass a `rename` function for the keys, or a `parse` function for the content, allowing it to be used for readable or require-able files.",
+  "version": "0.1.1",
   "homepage": "https://github.com/jonschlinkert/map-files",
   "author": {
     "name": "Jon Schlinkert",
