change default to use full filepath as key

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "map-files",
   "description": "Return an object for a glob of files. Pass a `rename` function for the keys, or a `parse` function for the content, allowing it to be used for readable or require-able files.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/jonschlinkert/map-files",
   "author": {
     "name": "Jon Schlinkert",
@@ -34,13 +34,22 @@
     "verb-tag-jscomments": ">= 0.2.0"
   },
   "keywords": [
-    "docs",
-    "documentation",
-    "generate",
-    "generator",
-    "markdown",
-    "templates",
-    "verb"
+    "dir",
+    "directories",
+    "directory",
+    "dirs",
+    "file",
+    "filepath",
+    "filepaths",
+    "files",
+    "hash",
+    "list",
+    "map",
+    "mapping",
+    "name",
+    "object",
+    "path",
+    "paths"
   ],
   "dependencies": {
     "globby": "^0.1.1"
