--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "map-files",
   "description": "Return an object for a glob of files. Pass a `rename` function for the keys, or a `parse` function for the content, allowing it to be used for readable or require-able files.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/jonschlinkert/map-files",
   "author": {
     "name": "Jon Schlinkert",
@@ -27,11 +27,17 @@
   "scripts": {
     "test": "mocha -R spec"
   },
+  "dependencies": {
+    "globby": "^0.1.1"
+  },
   "devDependencies": {
+    "gray-matter": "^0.5.1",
     "mocha": "*",
     "should": "^4.0.4",
     "verb": ">= 0.2.6",
-    "verb-tag-jscomments": ">= 0.2.0"
+    "verb-tag-jscomments": ">= 0.2.0",
+    "vinyl": "^0.4.3",
+    "vinyl-fs": "^0.3.9"
   },
   "keywords": [
     "dir",
@@ -50,8 +56,5 @@
     "object",
     "path",
     "paths"
-  ],
-  "dependencies": {
-    "globby": "^0.1.1"
-  }
+  ]
 }
