--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "map-files",
   "description": "Return an object for a glob of files. Pass a `rename` function for the keys, or a `parse` function for the content, allowing it to be used for readable or require-able files.",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "homepage": "https://github.com/jonschlinkert/map-files",
   "author": {
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
-  "repository": "jonschlinkert/map-files",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jonschlinkert/map-files.git"
+  },
   "bugs": {
     "url": "https://github.com/jonschlinkert/map-files/issues"
   },
-  "license": "MIT",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/jonschlinkert/map-files/blob/master/LICENSE-MIT"
+  },
   "files": [
     "index.js"
   ],
@@ -23,7 +29,8 @@
     "test": "mocha"
   },
   "dependencies": {
-    "globby": "^1.1.0"
+    "globby": "^1.1.0",
+    "is-glob": "^1.1.1"
   },
   "devDependencies": {
     "extend-shallow": "^1.1.1",
