--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "map-files",
   "description": "Return an object for a glob of files. Pass a `rename` function for the keys, or a `parse` function for the content, allowing it to be used for readable or require-able files.",
-  "version": "0.7.1",
+  "version": "0.7.3",
   "homepage": "https://github.com/jonschlinkert/map-files",
   "author": {
     "name": "Jon Schlinkert",
@@ -29,8 +29,7 @@
     "test": "mocha"
   },
   "dependencies": {
-    "globby": "^1.2.0",
-    "is-glob": "^1.1.3"
+    "globby": "^1.2.0"
   },
   "devDependencies": {
     "extend-shallow": "^1.1.1",
