--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jonschlinkert/map-files.git"
-  },
+  "repository": "jonschlinkert/map-files",
   "bugs": {
     "url": "https://github.com/jonschlinkert/map-files/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/jonschlinkert/map-files/blob/master/LICENSE-MIT"
-  },
+  "license": "MIT",
   "files": [
     "index.js"
   ],
@@ -29,8 +23,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "globby": "^1.2.0",
-    "micromatch": "^2.1.5"
+    "globby": "^2.1.0",
+    "lazy-cache": "^0.2.3",
+    "micromatch": "^2.2.0"
   },
   "devDependencies": {
     "extend-shallow": "^1.1.1",
