--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "license": "MIT",
   "files": [
-    "index.js"
+    "index.js",
+    "utils.js"
   ],
   "main": "index.js",
   "engines": {
@@ -20,13 +21,15 @@
     "test": "mocha"
   },
   "dependencies": {
+    "isobject": "^2.0.0",
     "lazy-cache": "^1.0.4",
     "matched": "^0.4.1",
-    "micromatch": "^2.3.8"
+    "vinyl": "^1.1.1"
   },
   "devDependencies": {
     "extend-shallow": "^2.0.1",
-    "gray-matter": "^2.0.2",
+    "gulp-format-md": "^0.1.8",
+    "js-yaml": "^3.6.0",
     "mocha": "^2.4.5",
     "relative": "^3.0.2",
     "should": "^8.3.1"
@@ -52,11 +55,26 @@
   "verb": {
     "related": {
       "list": [
+        "export-files",
         "file-reader",
         "filter-files",
-        "micromatch",
-        "export-files"
+        "micromatch"
       ]
-    }
+    },
+    "toc": false,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
+    "lint": {
+      "reflinks": true
+    },
+    "reflinks": [
+      "verb",
+      "vinyl"
+    ]
   }
 }
